argo/auto-namer-sensei/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: sa
      containers:
        - image: ghcr.io/thr3a/debate-simulator:3
          resources: {}
          imagePullPolicy: IfNotPresent
          name: web
          ports:
            - containerPort: 3000
