argo/auto-namer-sensei/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: web
