argo/auto-namer-sensei/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 10000
      name: http
      protocol: HTTP
    hosts:
    - "meimei-sensei.turai.work"
