argo/auto-namer-sensei/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
    - "*"
  gateways:
    - gw
  http:
    - route:
        - destination:
            host: web
            port:
              number: 3000
